--- a/Sistem Keuangan Daarul Jannah/static/CSS/dashboard.css
+++ b/Sistem Keuangan Daarul Jannah/static/CSS/dashboard.css
@@ -11,14 +11,6 @@ html, body {
     height: fit-content;
 }
 
-
-
-.h1{
-    padding-top: 50px;
-    font-size: 24px;
-    font-weight: bold;
-}
-
 .menu1{
     top: 50px;
     /*box Shadow */
@@ -159,7 +151,6 @@ nav ul li a:hover:before{
 .section{
     display:grid;
     min-height:100vh;
-    text-align:center;
 }
 
 .box-area h2{
@@ -229,4 +220,78 @@ nav ul li a:hover:before{
 
 .dropdown-menu li{
     margin-top: 5px;
+}
+
+.page-title{
+    font-weight: bolder;
+    font-size: 24px;
+}
+
+.sub-title{
+    margin-bottom: 30px;
+}
+
+.filter{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 40px;
+}
+
+.filter-kanan{
+    display: flex;
+    flex-direction: row;
+}
+
+table{
+    width: 100%;
+    border: 1px solid #CCCCCC;
+    border-radius: 1em;
+    padding: 10px;
+    /* text-align: center; */
+    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+    -webkit-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+    -moz-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+}
+
+.table{
+    margin-top: 30px;
+    border-radius: 10px;
+}
+
+th,td,tr{
+    padding: 15px;
+    text-align: center;
+}
+
+
+tr:nth-child(even) {
+    background-color: #ebebeb;
+  }
+.filter select, .filter input{
+    padding: 8px;
+    border-radius: 10px;
+    border: 1px solid #CCCCCC;
+    font-weight: bolder;
+    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+    -webkit-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+    -moz-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+}
+
+.filter a{
+    background-color: #056A31;
+    margin-right: 10px;
+    padding: 5px;
+    border-radius: 10px;
+    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+    -webkit-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+    -moz-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+}
+
+.p-btn{
+    color: white;
+    margin: 0;
+    padding-top: 5px;
+    padding-right: 5px;
+    padding-left: 5px;
 }
