--- a/Sistem Keuangan Daarul Jannah/templates/base.html
+++ b/Sistem Keuangan Daarul Jannah/templates/base.html
@@ -14,9 +14,13 @@
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        
+        <!-- CSS -->
+        <link rel="stylesheet" href="{{ url_for('static', filename='CSS/style.css') }}">
+
         <link rel="icon" type="image/png" href="{{ url_for('static', filename='Image/Icon1.png') }}">
         <script src="https://kit.fontawesome.com/07552a3127.js" crossorigin="anonymous"></script>
         {% block head%}
@@ -27,7 +31,7 @@
         <nav>
             <ul>
                 <li class="logo"><img src="{{ url_for('static', filename='Image/logo-sekolah.png') }}" class="schlogo"></li>
-                <li class="tag-logo">Sistem Pembayaran Sekolah Islam Plus Daarul Jannah</li>
+                <li class="tag-logo">Sistem Keuangan Sekolah Islam Plus Daarul Jannah</li>
                 <li><a href="/manajemen_siswa"><i class="fa fa-users"></i>&nbsp;  Data Siswa/i</a></li>
             </ul>
         </nav>
