--- a/Sistem Keuangan Daarul Jannah/templates/tabelsiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/tabelsiswa.html
@@ -5,7 +5,7 @@
         {% block head%}
             <!-- <title>Manajemen Siswa - Sistem Pembayaran DJ</title> -->
             <!-- JS Script -->
-            <script>document.title = "Manajemen Siswa - Sistem Pembayaran DJ</"</script>
+            <script>document.title = "Manajemen Siswa - Sistem Pembayaran DJ"</script>
             <script src="{{ url_for('static', filename='Javascript/filter_siswa.js') }}" type="text/javascript"></script>
         {% endblock %}
     </head>
@@ -69,7 +69,7 @@
                         <td> TK </td>
                         <td>{{ siswa_tk.kelas }}</td>
                         <td>
-                            <a class="btn-detail"></a>
+                            <a class="btn-detail" href="{{ url_for('riwayat_pembayaran', nis = siswa_tk['nis']) }}">Riwayat Pembayaran</a>
                             <a class="btn-input"></a>
                         </td>
                     </tr>
@@ -85,7 +85,7 @@
                         <td> SD </td>
                         <td>{{ siswa_sd.kelas }}</td>
                         <td>
-                            <a class="btn-detail"></a>
+                            <a class="btn-detail" href="{{ url_for('riwayat_pembayaran', nis = siswa_sd['nis']) }}">Riwayat Pembayaran</a>
                             <a class="btn-input"></a>
                         </td>
                     </tr>
@@ -103,7 +103,7 @@
                         <td> SMP </td>
                         <td>{{ siswa_smp.kelas }}</td>
                         <td>
-                            <a class="btn-detail"></a>
+                            <a class="btn-detail"href="{{ url_for('riwayat_pembayaran', nis = siswa_smp['nis']) }}">Riwayat Pembayaran</a>
                             <a class="btn-input"></a>
                         </td>
                     </tr>
