--- a/Sistem Keuangan Daarul Jannah/templates/tabelsiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/tabelsiswa.html
@@ -36,14 +36,14 @@
                     <a href="/tambah_siswa">
                         <p class="p-btn">Tambah Data Siswa/i</p>
                     </a>
-                    <div class="search-bar">
+                    <!-- <div class="search-bar"> -->
                         <select id="search-bar-filter">
                             <option value="NIS">NIS</option>
                             <option value="Nama">Nama</option>
                             <option value="Kelas">Kelas</option>
                         </select>
                         <input type="text" placeholder="Cari..." id="search-txt" onkeyup="searchBar()">
-                    </div>
+                    <!-- </div> -->
                 </div>
             </div>
             
