--- a/Sistem Keuangan Daarul Jannah/static/CSS/style.css
+++ b/Sistem Keuangan Daarul Jannah/static/CSS/style.css
@@ -294,4 +294,14 @@ tr:nth-child(even) {
     padding-top: 5px;
     padding-right: 5px;
     padding-left: 5px;
+    width: 170px;
+}
+/* 
+.search-bar select{
+    width: ;
+} */
+
+#search-txt{
+    margin-left: 5px;
+    width:300px;
 }
