--- a/Sistem Keuangan Daarul Jannah/static/CSS/base.css
+++ b/Sistem Keuangan Daarul Jannah/static/CSS/base.css
@@ -2,12 +2,13 @@
 html, body {
     height: 100%;
     font-family: "Poppins", sans-serif !important;
+    /* font-family:'Segoe UI',  Verdana, sans-serif; */
     background-color: #FAFAFA;
     margin:0px;
 }
 .parent {
     display: grid;
-    grid-template-columns: 0.75fr repeat(3, 1fr);
+    grid-template-columns: 0.65fr repeat(3, 1fr);
     grid-template-rows: repeat(7, 1fr) 0.75fr;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
@@ -20,9 +21,9 @@ html, body {
 }
 .top {
     grid-area: 1 / 2 / 2 / 5;
-    color: #26818C;
-    border-bottom: 2px solid #26818C;
+    border-bottom: 2px solid #056A31;
     padding-top: 10px;
+    color:black !important;
  }
 .middle { 
     grid-area: 2 / 2 / 8 / 5; 
@@ -35,7 +36,6 @@ html, body {
     color: #ccc;
 
 }
-
 
 .sidebar{
     text-align: center;
@@ -77,17 +77,6 @@ html, body {
     text-align: center;
 }
 
-.logout-btn{
-    padding: 10px;
-    width: 80%;
-    background-color: #DF6060;
-    border: 1px solid #DF6060;
-    color: white;
-    font-weight: bold;
-    font-size: 16px;
-    border-radius: 5px;
-}
-
 ul, li,a{
     list-style-type: none;
     text-decoration: none;
@@ -109,7 +98,7 @@ nav a{
 }
 
 .li-menu:hover, .li-menu:active{
-    color: #26818C;
+    color: black;
     background-color: white;
 }
 
@@ -121,4 +110,79 @@ nav a h4{
 
 .header {
     margin-left: 20px;
+    
 }
+
+.profil{
+    margin-left: 20px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.foto-profil{
+    width:50px; 
+    height:50px;
+    border-radius:100px;
+}
+
+/* .konten-profil{
+    display: flex;
+    flex-direction: row;
+    width: fit-content;
+    padding: 10px;
+} */
+.konten-profil:hover{
+    cursor:pointer;
+}
+
+.teks-profil h5, h6{
+    margin-bottom: 0px;
+    margin-top: 1px;
+    margin-right: 10px;
+}
+
+.teks-profil h5{
+    font-weight: bolder;
+    font-size: medium;
+    margin-bottom: 2px;
+}
+
+
+.dropbtn {
+    background-color: #3498DB;
+    color: white;
+    /* padding: 16px; */
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown a:hover {background-color: #ddd;}
+  
+  .show {display: block;}
