--- a/Sistem Keuangan Daarul Jannah/templates/base-b.html
+++ b/Sistem Keuangan Daarul Jannah/templates/base-b.html
@@ -33,10 +33,24 @@
 
             <!-- header -->
             <div class="top">
-                <div class="header">
-                    <h1>Selamat Datang, Admin</h1>
-                </div>
-                
+                <div class="dropdown">
+                    <button onclick="myFunction()" class="dropbtn">
+                        <div class="konten-profil">
+                            <div class="teks-profil">
+                                <h5>ija panjul</h5>
+                                <h6>119140130</h6>
+                            </div>
+                            <img src="../static/Image/foto-siswa.png" class="foto-profil">
+                        </div>
+                        
+                    </button>
+                    <div id="myDropdown" class="dropdown-content">
+                      <a href="#home">Home</a>
+                      <a href="#about">About</a>
+                      <a href="#contact">Contact</a>
+                    </div>
+                  </div>
+                    
             </div>
 
             <!-- main -->
@@ -52,6 +66,28 @@
            
         </div>
 
+        <script>
+            /* When the user clicks on the button, 
+            toggle between hiding and showing the dropdown content */
+            function myFunction() {
+              document.getElementById("myDropdown").classList.toggle("show");
+            }
+            
+            // Close the dropdown if the user clicks outside of it
+            window.onclick = function(event) {
+              if (!event.target.matches('.dropbtn')) {
+                var dropdowns = document.getElementsByClassName("dropdown-content");
+                var i;
+                for (i = 0; i < dropdowns.length; i++) {
+                  var openDropdown = dropdowns[i];
+                  if (openDropdown.classList.contains('show')) {
+                    openDropdown.classList.remove('show');
+                  }
+                }
+              }
+            }
+            </script>
+            
     </body>
 </html>
 
