--- a/Sistem Keuangan Daarul Jannah/static/CSS/style.css
+++ b/Sistem Keuangan Daarul Jannah/static/CSS/style.css
@@ -153,10 +153,6 @@ nav ul li a:hover:before{
     min-height:100vh;
 }
 
-.box-area h2{
-    text-transform:uppercase;
-    font-size:30px;
-}
 .profil{
     display: flex;
     /* flex-direction: column; */
@@ -296,12 +292,37 @@ tr:nth-child(even) {
     padding-left: 5px;
     width: 170px;
 }
-/* 
-.search-bar select{
-    width: ;
-} */
 
 #search-txt{
     margin-left: 5px;
     width:300px;
 }
+
+.card{
+    width: 100%;
+    height: 50%;
+    border-radius: 15px;
+    padding: 20px;
+}
+
+.ft-siswa{
+    width: 20%;
+    height: 90%;
+}
+
+.wrap-data{
+    display: flex;
+    /* justify-content: space-around; */
+}
+
+.tb-detail-siswa{
+    width:fit-content;
+    box-shadow: none;
+    border: 0;
+    height:fit-content;
+}
+
+.tb-detail-siswa tr:nth-child(even) {
+    background-color: white;
+}
+
