pemindahan lokasi foto siswa

--- a/Sistem Keuangan Daarul Jannah/templates/datasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/datasiswa.html
@@ -17,7 +17,7 @@
                     
                 <div class="card">
                     <div class="wrap-data">
-                        <img src="{{ url_for('static', filename='Image/foto-siswa.png') }}" class="ft-siswa" alt="">
+                        <img src="{{ url_for('static', filename='foto_siswa/foto-siswa.png') }}" class="ft-siswa" alt="">
                         <table class="tb-detail-siswa">
                             <tr>
                                 <td><b>Nama</b></td>
