--- a/Sistem Keuangan Daarul Jannah/templates/base-b.html
+++ b/Sistem Keuangan Daarul Jannah/templates/base-b.html
@@ -4,6 +4,8 @@
         <link rel="icon" type="image/x-icon" href="../static/icons/logo_bps.png">
         <link rel="stylesheet" href="../static/CSS/base.css">
         <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/07552a3127.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="parent">
@@ -20,7 +22,7 @@
                         <ul>
                             <li>
                                 <a href="" class="li-menu">
-                                    <i class="fi fi-sr-users-alt"></i>&emsp;
+                                    <i class="fa fa-users"></i>&emsp;
                                     <h4>Data Siswa/i</h4>
                                 </a>
                             </li>
@@ -33,24 +35,20 @@
 
             <!-- header -->
             <div class="top">
-                <div class="dropdown">
-                    <button onclick="myFunction()" class="dropbtn">
-                        <div class="konten-profil">
-                            <div class="teks-profil">
-                                <h5>ija panjul</h5>
-                                <h6>119140130</h6>
-                            </div>
-                            <img src="../static/Image/foto-siswa.png" class="foto-profil">
-                        </div>
-                        
+                
+                <div class="dropdown" style="float:right;">
+                    <button class="dropbtn">
+                        <img src="../static/Image/foto-siswa.png" class="foto-profil">
                     </button>
-                    <div id="myDropdown" class="dropdown-content">
-                      <a href="#home">Home</a>
-                      <a href="#about">About</a>
-                      <a href="#contact">Contact</a>
+                    <div class="dropdown-content" style="width:200px;padding:10px ">
+                        <li><a href="" class="disabled" style="color:rgb(155, 155, 155)">Otoritas: {{session['otoritas']}}</a></li>
+                        <li><a href="/logout" class="logout-btn">logout</a></li>
                     </div>
-                  </div>
-                    
+                </div>
+                <div style="float:right;padding-right:10px">
+                    <h4>Ija Panjul</h4>
+                    <p>119140130</p>
+                </div>
             </div>
 
             <!-- main -->
@@ -60,33 +58,12 @@
 
             <!-- footer -->
             <div class="footer">
-                <p>Copyright 2021</p>
+                <p>Copyright 2022</p>
             </div>
 
            
         </div>
 
-        <script>
-            /* When the user clicks on the button, 
-            toggle between hiding and showing the dropdown content */
-            function myFunction() {
-              document.getElementById("myDropdown").classList.toggle("show");
-            }
-            
-            // Close the dropdown if the user clicks outside of it
-            window.onclick = function(event) {
-              if (!event.target.matches('.dropbtn')) {
-                var dropdowns = document.getElementsByClassName("dropdown-content");
-                var i;
-                for (i = 0; i < dropdowns.length; i++) {
-                  var openDropdown = dropdowns[i];
-                  if (openDropdown.classList.contains('show')) {
-                    openDropdown.classList.remove('show');
-                  }
-                }
-              }
-            }
-            </script>
             
     </body>
 </html>
